added report issue link

--- a/imdb-rating-demographics/index.html
+++ b/imdb-rating-demographics/index.html
@@ -28,7 +28,7 @@
         <div id="chart_div">&nbsp;</div>
         <div id="poster"><a target="_blank"><img></a></div>
     </div>
-    <div id="more"><a href="https://github.com/yathish1618/yathish1618.github.io/blob/master/imdb-rating-history-graph/ReadMe.md" target="_blank">Read me</a>  |  <a onclick="downloadCSV()" href="" id="csv">Download data (csv)</a> | <a href="https://yathish1618.github.io/imdb-rating-history-graph/" target="_blank">IMDb Rating History</a> | <a href="https://yathish1618.github.io/imdb-top250-charts/" target="_blank">IMDb Top 250</a> | <a href="https://yathish1618.github.io/" target="_blank">Home</a></div>
+    <div id="more"><a href="https://github.com/yathish1618/yathish1618.github.io/blob/master/imdb-rating-history-graph/ReadMe.md" target="_blank">Read me</a>  |  <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/imdb-rating-demographics">Report Issue</a>  |  <a onclick="downloadCSV()" href="" id="csv">Download data (csv)</a> | <a href="https://yathish1618.github.io/imdb-rating-history-graph/" target="_blank">IMDb Rating History</a> | <a href="https://yathish1618.github.io/imdb-top250-charts/" target="_blank">IMDb Top 250</a> | <a href="https://yathish1618.github.io/" target="_blank">Home</a></div>
 </body>
 <script type="text/javascript" src="IMDbsearch.js"></script>
 
