added constitution of india page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
                         <ol class="menu-category-list has-images">
                             <li class="menu-item">
                                 <div class="menu-item-info">
+                                    <h4 class="menu-item-name">Constitution of India</h4>
+                                    <span class="menu-item-price"><a href="https://yathish1618.github.io/constitution-of-india/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/constitution-of-india" target="_blank">GitHub</a></span>
+                                    <p class="menu-item-description">Digitised Constitution of India (Updated in 2019)</p>
+                                </div>
+                                <a href="https://yathish1618.github.io/media-consumption/" target="_blank">
+                                <div class="menu-item-image has-meta-content">
+                                    <img src="assets/constitution-of-india.jpg" />
+                                </div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <div class="menu-item-info">
                                     <h4 class="menu-item-name">Media-Consumption</h4>
                                     <span class="menu-item-price"><a href="https://yathish1618.github.io/media-consumption/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/media-consumption" target="_blank">GitHub</a></span>
                                     <p class="menu-item-description">All my movies, books and music showcased in chronological order.</p>
