--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                     <span class="menu-item-price"><a href="https://yathish1618.github.io/constitution-of-india/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/constitution-of-india" target="_blank">GitHub</a></span>
                                     <p class="menu-item-description">Digitised Constitution of India (Updated in 2019)</p>
                                 </div>
-                                <a href="https://yathish1618.github.io/media-consumption/" target="_blank">
+                                <a href="https://yathish1618.github.io/constitution-of-india/" target="_blank">
                                 <div class="menu-item-image has-meta-content">
                                     <img src="assets/constitution-of-india.jpg" />
                                 </div>
