--- a/non-standard-deviation/index.html
+++ b/non-standard-deviation/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 
-	<link href='http://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<title>Non-Standard Deviation</title>
 	<meta charset="utf-8">
 	<script type="text/javascript"></script>
 	<!--<script language="javascript" type="text/javascript" src="jquery.js" ></script>-->
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 	<script language="javascript" type="text/javascript" src="core.js" ></script>
 	<link href="style.css" rel="stylesheet">
 
@@ -19,7 +19,7 @@
 			<div class="header">
 			<h2>Calculate Non-Standard Deviation</h2>
 			<strong>Enter the Goal: </strong><input value ="1" id="goal" name="goal" size="1"/>
-			<a> <br/> (For example, here 1 indicates a target of jogging for 1 km every day) </a>
+			<a> <br/> (For example, here 1 indicates a target of jogging 1 km every day) </a>
 			<br/><br/>
 			<strong>Enter Comma separated data:</strong>
 			<textarea value ="pi" id="pi" name="pi" cols="50" rows="5" >1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0</textarea>
