2020 mid year update

--- a/media-consumption/index.html
+++ b/media-consumption/index.html
@@ -20,6 +20,7 @@
 <div class="custom-select">
 <select onchange="updateYear(this);">
   <option value="-1">Select year:</option>
+  <option value="2020">2020</option>
   <option value="2019">2019</option>
   <option value="2018">2018</option>
   <option value="2017">2017</option>
