--- a/media-consumption/index.html
+++ b/media-consumption/index.html
@@ -5,6 +5,8 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/papaparse.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<link rel="shortcut icon" href="../assets/favicon-16x16.png" type="image/x-icon">
+<link rel="icon" href="../assets/favicon-16x16.png" type="image/x-icon">
 </head>
 <body>
 
