minor change to subtitle

--- a/tumblr-sort-posts-by-notes/index.html
+++ b/tumblr-sort-posts-by-notes/index.html
@@ -14,7 +14,7 @@
 <body>
     <a href="https://yathish1618.tumblr.com" target="_blank">yathish1618.tumblr.com</a>
     <h1>Most Popular Posts</h1>
-    <a >Be patient while the page loads. Someday this pain will be useful to you.</a>
+    <a >Be patient while the page loads. Someday this patience will be useful to you.</a>
     <div id="posts"></div>
     <div id="loading"></div>
     <button id="more" onclick="loadMore()">I want more..</button>
