hide years filed in form

--- a/md-master/index.htm
+++ b/md-master/index.htm
@@ -26,9 +26,10 @@
             <label for="csv-file"><b>Input file:</b></label>
             <input type="file" id="csv-file" name="files" onchange="changeInputFile()" />
             <br>
-            <label for="by"><b>Years:</b></label>
-            <input type="text" placeholder="Used only if date is empty." name="by" value="3"><br>
-            <label for="dt"><b>Enter Date:</b></label>
+            <button type="button" id="loadAll" class="btn" onclick="loadEverything()">Load Entire Chat</button>
+            <!-- <label for="by"><b>On This Day:</b></label>
+            <input type="text" placeholder="Enter 3 for 3 years back on this day" name="by" value=""><br> -->
+            <label for="dt"><b>Go to Date:</b></label>
             <input type="text" placeholder="Date/Year. Eg. 23 Apr 2016" name="dt" value="">
             <table style="table-layout: fixed;width: 100%;padding-bottom: 10px;">
                 <tbody>
@@ -70,7 +71,6 @@
                     </tr>
                 </tbody>
             </table>
-            <button type="button" id="loadAll" class="btn" onclick="loadEverything()">Load Everything</button>
             <button type="submit" class="btn">Submit</button>
         </form>
     </div>
