--- a/constitution-of-india/full.html
+++ b/constitution-of-india/full.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Constitution of India</title>
     <link href="style.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
 </head>
 <body>
     <div>
