--- a/tumblr-sort-posts-by-notes/index.html
+++ b/tumblr-sort-posts-by-notes/index.html
@@ -17,7 +17,7 @@
     <a >Be patient while the page loads. Life is NOT too short.</a>
     <div id="posts"></div>
     <div id="loading"></div>
-    <button id="more" onclick="loadMore()">I want more..</button>
+    <button id="more" onclick="loadMore()">Load more..</button>
 </body>
 
 </html>
