--- a/media-consumption/index.html
+++ b/media-consumption/index.html
@@ -25,7 +25,8 @@
 <div class="custom-select">
 <select onchange="updateYear(this);">
   <option value="-1">Select year:</option>
-  <option value="2021" selected>2021</option>
+  <option value="2022" selected>2022</option>
+  <option value="2021">2021</option>
   <option value="2020">2020</option>
   <option value="2019">2019</option>
   <option value="2018">2018</option>
