--- a/random-pi/index.html
+++ b/random-pi/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 
-	<link href='http://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<title>Randomness</title>
 	<meta charset="utf-8">
 	<script type="text/javascript"></script>
 	<!--<script language="javascript" type="text/javascript" src="jquery.js" ></script>-->
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 	<script language="javascript" type="text/javascript" src="core.js" ></script>
 	<link href="jquery.highlighttextarea.css" rel="stylesheet">
     <script src="jquery.highlighttextarea.js"></script>
